# EigenKache

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cuda/: attention_landmark_kernel.cu  kernel_smoke.cu
data/: README.md  example_trace.npz
docs/: cuda-plan.md  research-foundation.md
docs/paper/: 2026-paper-build-plan.md  build.sh  eigenkache-paper.md  eigenkache.tex  paper.tex  watch.sh
optbench/: bench.py  kernel.py
scripts/: capture_real_trace.py  check_cuda_env.py  make_paper_figure.py  structured_trace_experiment.py  test_cuda_kernels.sh
src/eigenkache/: __init__.py  bench.py  cli.py  policies.py  torch_hook.py  types.py
tests/: test_capture_real_trace.py  test_policies.py
