[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eigenkache"
version = "0.1.0"
description = "Attention-conditioned KV-cache landmark compression benchmark."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
